Thu Aug 10 21:08:00 CEST 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: More corrections and translation updates.

Mon Aug  7 12:02:16 PDT 2000 Wichert Akkerman <wakkerma@debian.org>

  * main/enquiry.c: cache value of packagelist formatstring instead
    of recreating it for every package

Tue Aug  1 10:56:52 EDT 2000 Ben Collins <bcollins@debian.org>

  * main/packages.c: fix thinko with versioned deps
  * debian/rules:clean: remove distclean call, we purge the whole build
    directory anyway.
  * main/main.c: add --assert-versioned-provides option
    main/main.h: prototype it
    main/enquiry.c: add assertverprov()

Mon Jul 31 23:38:56 EDT 2000 Ben Collins <bcollins@debian.org>

  * archtable: add ia64; revert sparc64 so that it turns into sparc. There
    wont be a full binary-sparc64 port.
  * dselect/main.cc: small fixups to get it to compile with gcc-2.96

Wed Jul 26 21:27:30 CEST 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated translation.

Sun Jul 23 15:23:15 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * main/enquiry.c: mark another string as translateable

Sun Jul 16 12:43:59 EDT 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-gencontrol.pl: add Origin, Submit-Bugs-To and
    Submit-Bugs-Style fields.
  * scripts/dpkg-source.1: slight formatting update
  * debian/copyright: merge to entries for Miquel van Smoorenburg

Sat Jul 15 14:55:00 CEST 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: More corrections.

Thu Jul 13 10:22:43 EDT 2000 Wichert Akkerman <wakkerma@debian.org>

  * lib/fields.c: make a non-exact versioned provides a warning instead
    of an error

Tue Jul  4 17:29:06 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * main/enquiry.c: modify getttywidth() to check COLUMNS environment
  * scripts/controllib.pl: remove warnings for LOGNAME stuff

Wed Jun 28 19:50:00 CEST 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation from comments received.
