@@ -19,6 +19,7 @@ dpkg (1.7.0) unstable; urgency=low
   * archtable: add ia64; revert sparc64 so that it turns into sparc. There
     wont be a full binary-sparc64 port.
   * dselect/main.cc: small fixups to get it to compile with gcc-2.96
+  * Clean  up fd handling in some places. Closes: Bug#69359,#69360,#69361
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
