@@ -1,3 +1,9 @@
+Mon Aug 21 12:58:15 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * lib/lock.c, main/filesdb.c, main/archives.c, main/configure.c,
+     dpkg-deb/build.c, dpkg-deb/extract.c: updates from Chip Salzenberg
+     to clean up fd handling
+
 Thu Aug 10 21:08:00 CEST 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: More corrections and translation updates.
